# lem_in

./: .ft_read_flag.c.swp  .gitignore  1  CMakeLists.txt  Makefile  README.md  ft_add.c  ft_add_func.c  ft_add_room.c  ft_addit_func.c  ft_del.c  ft_del2.c  ft_error3.c  ft_errors.c  ft_errors2.c  ft_help.c  ft_help_read.c  ft_int_operat.c  ft_is.c  ft_is_in.c  ft_lee_algor.c  ft_new.c  ft_new_map.c  ft_output.c  ft_print.c  ft_read.c  ft_read2.c  ft_read_flag.c  ft_road.c  ft_search.c  ft_valid.c  ft_valid_link.c  lem-in  lem_in  lem_in.h  main.c
libftprintf/libft/: ft_atoi.c  ft_strsplit.c  libft.h
map/: 500_map  big.map  empty.map  no_ants.map  no_links.map  no_room.map  subjet1.map  subjet2.map
