cmake_minimum_required(VERSION 3.9)
project(lem_in_f)

set(CMAKE_CXX_STANDARD 11)

add_executable(lem_in_f
        libftprintf/ft_printf/ft_addchar.c
        libftprintf/ft_printf/ft_check_key.c
        libftprintf/ft_printf/ft_del_key.c
        libftprintf/ft_printf/ft_itoa_base.c
        libftprintf/ft_printf/ft_myputustr_fd.c
        libftprintf/ft_printf/ft_n.c
        libftprintf/ft_printf/ft_new_list.c
        libftprintf/ft_printf/ft_nonoercent.c
        libftprintf/ft_printf/ft_print_char_str.c
        libftprintf/ft_printf/ft_print_digit.c
        libftprintf/ft_printf/ft_print_float.c
        libftprintf/ft_printf/ft_print_res.c
        libftprintf/ft_printf/ft_print_unicode.c
        libftprintf/ft_printf/ft_print_w_char.c
        libftprintf/ft_printf/ft_printf.c
        libftprintf/ft_printf/ft_printf.h
        libftprintf/ft_printf/ft_processing_args.c
        libftprintf/ft_printf/ft_putuchar_fd.c
        libftprintf/ft_printf/ft_search_in_line.c
        libftprintf/ft_printf/ft_size2dig.c
        libftprintf/ft_printf/ft_strtounicat.c
        libftprintf/ft_printf/ft_strupper.c
        libftprintf/ft_printf/ft_wrealloc.c
        libftprintf/ft_printf/ft_wstrdel.c
        libftprintf/ft_printf/ft_wstrlen.c
        libftprintf/ft_printf/ft_wstrzero.c
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_char_replace.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_lstadd.c
        libftprintf/libft/ft_lstadd_end.c
        libftprintf/libft/ft_lstdel.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstiter.c
        libftprintf/libft/ft_lstlen.c
        libftprintf/libft/ft_lstmap.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_realloc.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c
        libftprintf/libft/get_next_line.c
        libftprintf/libft/libft.h
        main.c lem_in.h ft_new_map.c ft_add_room.c)
